[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semi-ate-spyder"
dynamic = ["version"]
description = "Spyder ate plugin for working with ATE projects"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-2.0-only"
authors = [
    { name = "The Semi-ATE Project Contributors", email = "ate.organization@gmail.com" }
]
requires-python = ">= 3.9"
keywords = [
    "Semiconductor",
    "ATE",
    "Automatic Test Equipment",
    "Spyder",
    "Plugin"
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
	"qtawesome",
	"pydantic",
	"numpy",
	"pandas",
	"openpyxl",
	"spyder==5.5.6",
	"semi-ate-common",
	"semi-ate-plugins",
	"semi-ate-project-database",
	"semi-ate-sammy",
	"pygit2",
	"requests",
	"pyyaml",
	"force-delete-win; os_name == 'nt'"
]
[project.optional-dependencies]
test = [
	"hypothesis==5.5.2",
	"mock==4.0.3",
	"pytest==7.1.1",
	"pytest-qt==4.0.2",
	"pytest-mock==3.7.0"
]

[project.urls]
	repository = "https://github.com/Semi-ATE/Semi-ATE"
	Documentation = "https://semi-ate.github.io/Semi-ATE/"

[tool.hatch.version]
	path = "ate_spyder/__init__.py"

[tool.hatch.build.targets.wheel]
	packages = [
		"ate_spyder",
		"ate_spyder_stil",
		"ate_spyder_test_runner"
	]

[project.entry-points."spyder.plugins"]
	ate = "ate_spyder.plugin:ATE"
	test_runner = "ate_spyder_test_runner.plugin:TestRunnerPlugin"
	stil = "ate_spyder_stil.plugin:STIL"

