[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LabMl-adjutancy"
dynamic = ["version"]
description = "Plugin for Semi-ATE flow controlling"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-2.0-only"
authors = [
    { name = "The Semi-ATE Project Contributors", email = "ate.organization@gmail.com" }
]
requires-python = ">= 3.9"
keywords = [
    "Semiconductor",
    "ATE",
    "Automatic Test Equipment",
    "Spyder",
    "Plugin"
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
	"xlrd",
	"lxml",
	"paho-mqtt",
	"ipywidgets",
	"hightime",
	"QtAwesome",
	"QDarkStyle",
	"svgelements",
	"semi-ate-common",
]

[project.urls]
	repository = "https://github.com/Semi-ATE/Semi-ATE"
	Documentation = "https://semi-ate.github.io/Semi-ATE/"

[tool.hatch.version]
	path = "__init__.py"

[tool.hatch.build.targets.wheel]
	packages = [
		"labml_adjutancy",
	]

[project.entry-points."spyder.plugins"]
	lab_control = "plugin_control:LabControlPlugin"
	lab_gui = "plugin_gui:LabGuiPlugin"

[project.entry-points."ate.org"]
	labmlplug = "generalpurposefunc:Plugin"
	semiplug = "plugin_semictrl:Plugin"

